--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ hr {
  
     body {
       background-color: aquamarine;
+      text-align: center;
  
     }
  
@@ -38,6 +39,7 @@ hr {
  
       body{
        background-color: lightsalmon;
+       text-align: center;
      
     }
     }
